# rr_image_buffer

./: CMakeLists.txt  README.md  package.xml
include/rr_image_buffer/: image_buffer.hpp  rr_image_buffer.hpp
msg/: GetImage.msg
src/: image_buffer.cpp
